feat: implementacao de gerenciador de vendas. refactor: outras refatoraçoes menores.